# physics

./: .gitignore  Cargo.toml  README.md  bench.sh  colors.txt  sweep_threads.sh
src/: chunk_iter.rs  emit.rs  main.rs  obstacles.rs  physics.rs  shader.rs
